demo - list and directive -- page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <div class="body" ui-view></div>
 </body>
 </html>
-<script src="dist/js/base.js"></script>
 <script src="config/index.js"></script>
 <script src="config/router.js"></script>
 <script src="config/controller.js"></script>
-<!-- <script src="config/directive.js"></script> -->
+<script src="config/directive.js"></script>
 <!-- <script src="config/filter.js"></script> -->
-<!-- <script src="config/services.js"></script> -->
+<script src="config/services.js"></script>
+<script src="dist/libs/relaui/relaui.js"></script>
+<script src="dist/libs/laydate/laydate.js"></script>
