--- a/index.html
+++ b/index.html
@@ -32,3 +32,4 @@
 <script src="config/services.js"></script>
 <script src="dist/libs/relaui/relaui.js"></script>
 <script src="dist/libs/laydate/laydate.js"></script>
+<script src="dist/js/base.js"></script>
