--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="body" ui-view></div>
 </body>
 </html>
-<script src="config/index.js"></script>
+<script src="config/config.js"></script>
 <script src="config/router.js"></script>
 <script src="config/controller.js"></script>
 <script src="config/directive.js"></script>
