add json folder

--- a/config/directive/directiveView/pagination.html
+++ b/config/directive/directiveView/pagination.html
@@ -1,7 +1,7 @@
-<div class="ui-page-box" ng-show="pageTotal !== 1">
+<div class="ui-page-box" ng-show="pageTotal !== 1 && pageHide !== false && pageTotal !== 0">
 	<a href="javascript: void(0);" ng-show="pegeNo!==1" ng-click="query.$query(pegeNo - 1)">上一页</a><!-- 
-	 --><a href="javascript: void(0);" ng-show="pegeNo!==1" ng-click="query.$query(1)">1</a><!-- 
-	 --><a href="javascript: void(0);" ng-show="pegeNo - 4 > 0 && pageTotal > 7" class="ui-page-ellipsis">…</a><!-- 
+	 --><a href="javascript: void(0);" ng-show="pegeNo - 4 > 0 && pageTotal > 7" ng-click="query.$query(1)">1</a><!-- 
+	 --><a href="javascript: void(0);" ng-show="pegeNo - 5 > 0 && pageTotal > 7" class="ui-page-ellipsis">…</a><!-- 
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo - 6)" ng-show="pegeNo - 6 > 0 && pageTotal <= 7">{{pegeNo - 6}}</a><!-- 
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo - 5)" ng-show="pegeNo - 5 > 0 && pageTotal <= 7">{{pegeNo - 5}}</a><!-- 
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo - 4)" ng-show="pegeNo - 4 > 0 && pageTotal <= 7">{{pegeNo - 4}}</a><!-- 
@@ -15,8 +15,8 @@
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo + 4)" ng-show="pegeNo + 4 <= pageTotal && pegeNo + 4 < 8">{{pegeNo + 4}}</a><!-- 
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo + 5)" ng-show="pegeNo + 5 <= pageTotal && pegeNo + 5 < 8">{{pegeNo + 5}}</a><!-- 
 	 --><a href="javascript: void(0);" ng-click="query.$query(pegeNo + 6)" ng-show="pegeNo + 6 <= pageTotal && pegeNo + 6 < 8">{{pegeNo + 6}}</a><!-- 
-	 --><a href="javascript: void(0);" ng-show="pageTotal >= pegeNo + 4 && pageTotal > 7" class="ui-page-ellipsis">…</a><!-- 
-	 --><a href="javascript: void(0);" ng-show="pegeNo !== pageTotal" ng-click="query.$query(pageTotal)">{{pageTotal}}</a><!-- 
+	 --><a href="javascript: void(0);" ng-show="pageTotal >= pegeNo + 5 && pageTotal > 7" class="ui-page-ellipsis">…</a><!-- 
+	 --><a href="javascript: void(0);" ng-show="pageTotal >= pegeNo + 4 && pageTotal > 7" ng-click="query.$query(pageTotal)">{{pageTotal}}</a><!-- 
 	 --><a href="javascript: void(0);" ng-show="pegeNo !== pageTotal" ng-click="query.$query(pegeNo + 1)">下一页</a><!-- 
 	 --><span>
 		到第<!--  
