router otherwise welcome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- favicon -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="bookmark" type="image/x-icon" href="favicon.ico" />
-	<title>后台管理系统</title>
+	<title>relaui</title>
 	<link rel="stylesheet" href="dist/libs/relaui/relaui.css">
 	<!-- 依赖库 -->
 	<script src="dist/js/jquery.min.js"></script>
