--- a/index.html
+++ b/index.html
@@ -33,3 +33,6 @@
 <script src="dist/libs/relaui/relaui.js"></script>
 <script src="dist/libs/laydate/laydate.js"></script>
 <script src="dist/js/base.js"></script>
+
+<!-- 引用富文本编辑器 -->
+<script type="text/javascript" src="dist/libs/editor/wangEditor.js"></script>
