--- a/index.html
+++ b/index.html
@@ -35,4 +35,8 @@
 <script src="dist/js/base.js"></script>
 
 <!-- 引用富文本编辑器 -->
-<script type="text/javascript" src="dist/libs/editor/wangEditor.js"></script>
+<script src="dist/libs/editor/wangEditor.js"></script>
+<!-- echarts -->
+<script src="dist/libs/echarts/echarts.common.min.js"></script>
+<script src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
+<script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
